test/tests/operators/every/missing_file.txt
error: the file `./this-file-does-not-exist.json` does not exist
 --> tests/operators/every/missing_file.tql:6:8
  |
6 |   from "./this-file-does-not-exist.json"
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
